--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-toastify": "^10.0.6",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
+    "ts-pattern": "^5.5.0",
     "yup": "^1.5.0"
   },
   "devDependencies": {
